update header wrap for chicos scrolling issue

--- a/chicos_brands/chicos/custom.css
+++ b/chicos_brands/chicos/custom.css
@@ -75,7 +75,7 @@ label {
 }
 
 #header-wrap {
-  height: 10.075rem;
+  height: 9.075rem !important;
 }
 
 #header-inner {
